# if_def

./: .gitignore  Cargo.toml  a.txt  build.rs
src/: consts.rs  lib.rs  main.rs
