[package]
name = "if_def" 
version = "0.1.0"
authors = ["IronThread <santinofuenteskillian@gmail.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
description = "if_def preprocedural macro implemented in Rust as an attribute and a procedural one for `defined`."
repository = "https://github.com/IronThread/if_def"
keywords = ["if_def","c"]
categories = []

[lib]
proc-macro = true

[dependencies]
sync_2 = "1"